<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBg"
        tools:context=".features.detail.view.RecipeDetailFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/rowRecipeCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/cardViewContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/recipeImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:id="@+id/recipeDetailTitleBackground"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/row_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="@font/playfair_display_bold_italic" />
                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/recipeInfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rowRecipeCardView"
                android:alpha="0">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/recipeDetail"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeChefTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipeDetails"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/chefName"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeChefValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/recipeChefTitle"
                android:layout_below="@+id/recipeDetails"
                android:layout_margin="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeCalorieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipeChefTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/calories"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeCalorieValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/recipeChefTitle"
                android:layout_toEndOf="@+id/recipeCalorieTitle"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:id="@+id/tagHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/recipeCalorieTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recipeTagsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:id="@+id/tagContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tagHolder"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeDescriptionValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/recipeDescriptionTitle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</layout>